--- a/installing/installing_ibm_cloud/ipi/installing-ibm-cloud-customizations.adoc
+++ b/installing/installing_ibm_cloud/ipi/installing-ibm-cloud-customizations.adoc
@@ -1,21 +1,24 @@
 :_mod-docs-content-type: ASSEMBLY
 include::_attributes/common-attributes.adoc[]
 [id="installing-ibm-cloud-customizations"]
-= Installing a cluster on {ibm-cloud-title} with customizations
+= Installing a cluster with customizations on {ibm-cloud-title}
 :context: installing-ibm-cloud-customizations
 
 toc::[]
 
-In {product-title} version {product-version}, you can install a customized cluster on infrastructure that the installation program provisions on {ibm-cloud-name}. To customize the installation, you modify parameters in the `install-config.yaml` file before you install the cluster.
+In {product-title} version {product-version}, you can install a
+cluster, with customizations, on infrastructure that the installation program provisions on {ibm-cloud-name}.
+
+To customize the installation, you modify parameters in the `install-config.yaml` file before you install the cluster.
 
 [id="prerequisites_installing-ibm-cloud-customizations"]
 == Prerequisites
 
-* You reviewed details about the xref:../../architecture/architecture-installation.adoc#architecture-installation[{product-title} installation and update] processes.
-* You read the documentation on xref:../../installing/overview/installing-preparing.adoc#installing-preparing[selecting a cluster installation method and preparing it for users].
-* You xref:../../installing/installing_ibm_cloud/installing-ibm-cloud-account.adoc#installing-ibm-cloud-account[configured an {ibm-cloud-name} account] to host the cluster.
-* If you use a firewall, you xref:../../installing/install_config/configuring-firewall.adoc#configuring-firewall[configured it to allow the sites] that your cluster requires access to.
-* You configured the `ccoctl` utility before you installed the cluster. For more information, see xref:../../installing/installing_ibm_cloud/configuring-iam-ibm-cloud.adoc#configuring-iam-ibm-cloud[Configuring IAM for {ibm-cloud-name}].
+* You reviewed details about the xref:../../../architecture/architecture-installation.adoc#architecture-installation[{product-title} installation and update] processes.
+* You read the documentation on xref:../../../installing/overview/installing-preparing.adoc#installing-preparing[selecting a cluster installation method and preparing it for users].
+* You xref:../../../installing/installing_ibm_cloud/installing-ibm-cloud-account.adoc#installing-ibm-cloud-account[configured an {ibm-cloud-name} account] to host the cluster.
+* If you use a firewall, you xref:../../../installing/install_config/configuring-firewall.adoc#configuring-firewall[configured it to allow the sites] that your cluster requires access to.
+* You configured the `ccoctl` utility before you installed the cluster. For more information, see xref:../../../installing/installing_ibm_cloud/configuring-iam-ibm-cloud.adoc#configuring-iam-ibm-cloud[Configuring IAM for {ibm-cloud-name}].
 
 include::modules/cluster-entitlements.adoc[leveloffset=+1]
 
@@ -29,14 +32,14 @@ include::modules/installation-initializing.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
 .Additional resources
-* xref:../../installing/installing_ibm_cloud/installation-config-parameters-ibm-cloud-vpc.adoc#installation-config-parameters-ibm-cloud-vpc[Installation configuration parameters for {ibm-cloud-name}]
+* xref:../../../installing/installing_ibm_cloud/installation-config-parameters-ibm-cloud-vpc.adoc#installation-config-parameters-ibm-cloud-vpc[Installation configuration parameters for {ibm-cloud-name}]
 
 include::modules/installation-minimum-resource-requirements.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
 .Additional resources
 
-* xref:../../scalability_and_performance/optimization/optimizing-storage.adoc#optimizing-storage[Optimizing storage]
+* xref:../../../scalability_and_performance/optimization/optimizing-storage.adoc#optimizing-storage[Optimizing storage]
 
 include::modules/installation-ibm-cloud-tested-machine-types.adoc[leveloffset=+2]
 
@@ -59,17 +62,17 @@ include::modules/cli-logging-in-kubeadmin.adoc[leveloffset=+1]
 [role="_additional-resources"]
 [id="additional-resources_installing-ibm-cloud-customizations-console"]
 .Additional resources
-* xref:../../web_console/web-console.adoc#web-console[Accessing the web console]
+* xref:../../../web_console/web-console.adoc#web-console[Accessing the web console]
 
 include::modules/cluster-telemetry.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
 [id="additional-resources_installing-ibm-cloud-customizations-telemetry"]
 .Additional resources
-* xref:../../support/remote_health_monitoring/about-remote-health-monitoring.adoc#about-remote-health-monitoring[About remote health monitoring]
+* xref:../../../support/remote_health_monitoring/about-remote-health-monitoring.adoc#about-remote-health-monitoring[About remote health monitoring]
 
 [id="next-steps_installing-ibm-cloud-customizations"]
 == Next steps
-* xref:../../post_installation_configuration/cluster-tasks.adoc#available_cluster_customizations[Customize your cluster].
+* xref:../../../post_installation_configuration/cluster-tasks.adoc#available_cluster_customizations[Customize your cluster].
 * If necessary, you can
-xref:../../support/remote_health_monitoring/opting-out-of-remote-health-reporting.adoc#opting-out-remote-health-reporting_opting-out-remote-health-reporting[opt out of remote health reporting].
+xref:../../../support/remote_health_monitoring/opting-out-of-remote-health-reporting.adoc#opting-out-remote-health-reporting_opting-out-remote-health-reporting[opt out of remote health reporting].
