--- a/installing/installing_ibm_cloud/ipi/installing-ibm-cloud-network-customizations.adoc
+++ b/installing/installing_ibm_cloud/ipi/installing-ibm-cloud-network-customizations.adoc
@@ -1,24 +1,26 @@
 :_mod-docs-content-type: ASSEMBLY
 include::_attributes/common-attributes.adoc[]
 [id="installing-ibm-cloud-network-customizations"]
-= Installing a cluster on {ibm-cloud-title} with network customizations
+= Installing a cluster with network customizations on {ibm-cloud-title}
 :context: installing-ibm-cloud-network-customizations
 
 toc::[]
 
-In {product-title} version {product-version}, you can install a cluster with a
-customized network configuration on infrastructure that the installation program provisions on {ibm-cloud-name}. By customizing your network configuration, your cluster can coexist with existing IP address allocations in your environment and integrate with existing MTU and VXLAN configurations. To customize the installation, you modify parameters in the `install-config.yaml` file before you install the cluster.
+In {product-title} version {product-version}, you can install a
+cluster, with Virtual Private Cloud (VPC) network configuration customizations, on infrastructure that the installation program provisions on {ibm-cloud-name}. By customizing your network configuration, your cluster can coexist with existing IP address allocations in your environment and integrate with existing MTU and VXLAN configurations.
+
+To customize the installation, you modify parameters in the `install-config.yaml` file before you install the cluster.
 
 You must set most of the network configuration parameters during installation, and you can modify only `kubeProxy` configuration parameters in a running cluster.
 
 [id="prerequisites_installing-ibm-cloud-network-customizations"]
 == Prerequisites
 
-* You reviewed details about the xref:../../architecture/architecture-installation.adoc#architecture-installation[{product-title} installation and update] processes.
-* You read the documentation on xref:../../installing/overview/installing-preparing.adoc#installing-preparing[selecting a cluster installation method and preparing it for users].
-* You xref:../../installing/installing_ibm_cloud/installing-ibm-cloud-account.adoc#installing-ibm-cloud-account[configured an {ibm-cloud-name} account] to host the cluster.
-* If you use a firewall, you xref:../../installing/install_config/configuring-firewall.adoc#configuring-firewall[configured it to allow the sites] that your cluster requires access to.
-* You configured the `ccoctl` utility before you installed the cluster. For more information, see xref:../../installing/installing_ibm_cloud/configuring-iam-ibm-cloud.adoc#configuring-iam-ibm-cloud[Configuring IAM for {ibm-cloud-name}].
+* You reviewed details about the xref:../../../architecture/architecture-installation.adoc#architecture-installation[{product-title} installation and update] processes.
+* You read the documentation on xref:../../../installing/overview/installing-preparing.adoc#installing-preparing[selecting a cluster installation method and preparing it for users].
+* You xref:../../../installing/installing_ibm_cloud/installing-ibm-cloud-account.adoc#installing-ibm-cloud-account[configured an {ibm-cloud-name} account] to host the cluster.
+* If you use a firewall, you xref:../../../installing/install_config/configuring-firewall.adoc#configuring-firewall[configured it to allow the sites] that your cluster requires access to.
+* You configured the `ccoctl` utility before you installed the cluster. For more information, see xref:../../../installing/installing_ibm_cloud/configuring-iam-ibm-cloud.adoc#configuring-iam-ibm-cloud[Configuring IAM for {ibm-cloud-name}].
 
 include::modules/cluster-entitlements.adoc[leveloffset=+1]
 
@@ -32,7 +34,7 @@ include::modules/installation-initializing.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
 .Additional resources
-* xref:../../installing/installing_ibm_cloud/installation-config-parameters-ibm-cloud-vpc.adoc#installation-config-parameters-ibm-cloud-vpc[Installation configuration parameters for {ibm-cloud-name}]
+* xref:../../../installing/installing_ibm_cloud/installation-config-parameters-ibm-cloud-vpc.adoc#installation-config-parameters-ibm-cloud-vpc[Installation configuration parameters for {ibm-cloud-name}]
 
 include::modules/installation-minimum-resource-requirements.adoc[leveloffset=+2]
 
@@ -41,7 +43,7 @@ include::modules/installation-ibm-cloud-tested-machine-types.adoc[leveloffset=+2
 [role="_additional-resources"]
 .Additional resources
 
-* xref:../../scalability_and_performance/optimization/optimizing-storage.adoc#optimizing-storage[Optimizing storage]
+* xref:../../../scalability_and_performance/optimization/optimizing-storage.adoc#optimizing-storage[Optimizing storage]
 
 include::modules/installation-ibm-cloud-config-yaml.adoc[leveloffset=+2]
 
@@ -67,18 +69,18 @@ include::modules/cli-logging-in-kubeadmin.adoc[leveloffset=+1]
 [role="_additional-resources"]
 [id="additional-resources_installing-ibm-cloud-network-customizations-console"]
 .Additional resources
-* xref:../../web_console/web-console.adoc#web-console[Accessing the web console]
+* xref:../../../web_console/web-console.adoc#web-console[Accessing the web console]
 
 include::modules/cluster-telemetry.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
 [id="additional-resources_installing-ibm-cloud-network-customizations-telemetry"]
 .Additional resources
-* xref:../../support/remote_health_monitoring/about-remote-health-monitoring.adoc#about-remote-health-monitoring[About remote health monitoring]
+* xref:../../../support/remote_health_monitoring/about-remote-health-monitoring.adoc#about-remote-health-monitoring[About remote health monitoring]
 
 [id="next-steps_installing-ibm-cloud-network-customizations"]
 == Next steps
 
-* xref:../../post_installation_configuration/cluster-tasks.adoc#available_cluster_customizations[Customize your cluster].
+* xref:../../../post_installation_configuration/cluster-tasks.adoc#available_cluster_customizations[Customize your cluster].
 * If necessary, you can
-xref:../../support/remote_health_monitoring/opting-out-of-remote-health-reporting.adoc#opting-out-remote-health-reporting_opting-out-remote-health-reporting[opt out of remote health reporting].
+xref:../../../support/remote_health_monitoring/opting-out-of-remote-health-reporting.adoc#opting-out-remote-health-reporting_opting-out-remote-health-reporting[opt out of remote health reporting].
