OBSDOCS-1408: Make an example separation for Moving monitoring components to different nodes section

--- a/observability/monitoring/configuring-the-monitoring-stack.adoc
+++ b/observability/monitoring/configuring-the-monitoring-stack.adoc
@@ -119,8 +119,16 @@ endif::openshift-dedicated,openshift-rosa[]
 * xref:../../observability/monitoring/configuring-the-monitoring-stack.adoc#using-pod-topology-spread-constraints-for-monitoring_configuring-the-monitoring-stack[Using pod topology spread constraints for monitoring]
 * link:https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector[Kubernetes documentation about node selectors]
 
-include::modules/monitoring-moving-monitoring-components-to-different-nodes.adoc[leveloffset=+2]
+// This following ifndef causes the first procedure NOT to show up in ROSA/OSD builds, only in the OCP build
+// The final solution WILL NOT need those ifdef statements
+// The module should only include core platform monitoring
+ifndef::openshift-dedicated,openshift-rosa[]
+include::modules/monitoring-moving-monitoring-components-to-different-nodes.adoc[leveloffset=+2,tags=**;CPM;!UWM]
+endif::openshift-dedicated,openshift-rosa[]
 
+// The following module shows in all builds.
+// The module should only include monitoring for user-defined projects
+include::modules/monitoring-moving-monitoring-components-to-different-nodes.adoc[leveloffset=+2,tags=**;!CPM;UWM]
 
 [role="_additional-resources"]
 .Additional resources
