OCPBUGS-43323-rn:adds KI to rns about IPsec

--- a/updating/preparing_for_updates/updating-cluster-prepare.adoc
+++ b/updating/preparing_for_updates/updating-cluster-prepare.adoc
@@ -29,6 +29,11 @@ Without the correct micro-architecture requirements, the update process will fai
 
 There are no Kubernetes API removals in {product-title} 4.15.
 
+[IMPORTANT]
+====
+If you have IPsec enabled on your cluster, you must disable it prior to upgrading to {product-title} 4.15. There is a known issue where pod-to-pod communication might be interrupted or lost when updating to 4.15 without disabling IPsec. For information on disabling IPsec, see xref:../networking/ovn_kubernetes_network_provider/configuring-ipsec-ovn.adoc#configuring-ipsec-ovn[Configuring IPsec encryption]. (link:https://issues.redhat.com/browse/OCPBUGS-43323[*OCPBUGS-43323*])
+====
+
 // Commenting out this section because there are no APIs being removed in OCP 4.15 / Kube 1.28. But we'll need this section again for 4.16
 ////
 {product-title} 4.14 uses Kubernetes 1.27, which removed several deprecated APIs.
